alignment bug fix; sss validation; rm dashboard

--- a/src/Pages/Expenses/Expenses.css
+++ b/src/Pages/Expenses/Expenses.css
@@ -9,7 +9,7 @@
     background-color: #003459;
     color:white;
     height: 100vh;
-    width: 100vw;
+    width: 100vw; 
     display: flex;
     /* align-items: center; */
 }
@@ -17,16 +17,16 @@
 .expenses-wrapper{
     display: grid;
     align-items: center;
-    grid-template-columns: 15vw 59vw 26vw;
+    grid-template-columns: 14.95vw 59vw 26vw;
 }
 
 .expenses-main-container{
-    border-radius: 10px;
+    border-radius: 8px;
     display: grid;
     grid-template-rows: 10% 10% 5% 75%;
-    height: 92vh;
-    width: 95%;
-    margin-right: 1vw;
+    height: 93vh;
+    width: calc(100% - 2vw);
+    /* margin-right: 1vw; */
     /* margin-left: 1vw; */
     padding-left: 1vw;
     background-color:white;
@@ -34,7 +34,7 @@
 
 .expenses-header{
     /* margin-left: 2%; */
-    margin-top: 2%;
+    margin-top: 2.3vh;
     height: 70%;
     display: flex;
     /* flex-wrap: wrap; */
@@ -45,7 +45,7 @@
 .expenses-header h1{
     padding: 0;
     margin: 0;
-    padding-left: 1vw;
+    padding-left: 0.5vw;
     color:#003459;
     font-size: 2em;
 }
@@ -78,12 +78,12 @@
 }
 
 .expenses-summary-container{
-    border-radius: 10px;
+    border-radius: 8px;
     display: block;
-    height: 84vh;
-    width: 83%;
+    height: 89.75vh;
+    width: 84%;
     background-color: white;
-    padding: 7.5% 5%;
+    padding: 3% 5%;
     color: var(--secondary-color);
     text-align: left;
 }
@@ -96,6 +96,7 @@
     /* font-size: 2em; */
 }
 .expenses-summary-container-header{
+    margin-top: 1.75vh;
     margin-bottom: 2vh;
     display: inline-flex;
     width: 100%;
@@ -141,12 +142,13 @@
 }
 
 .expenses-summary-export-btn-wrapper{
+    margin-top: 0.25vh;
     float: right;
     margin-left: 2vw;
 }
 
 .expenses-grow-menu{
-    border-radius: 4px;
+    border-radius: 8px;
     height: 3vh;
     width: 9vw;
     padding-left: 0.5vw;
@@ -175,7 +177,7 @@
     opacity: 0.8;
     color: black;
     float: left;
-    margin-top: 1.25vh;
+    margin-top: 1.5vh;
     /* font-size: small; */
     /* margin-right: 0.8rem; */
 }
@@ -191,6 +193,7 @@
 }
 
 .expenses-grow-btn-container{
+    margin-top: 1vh;
     display: flex;
     float: right;
     /* margin-left: 12vw; */
